# springbootplusplus_data

./: CMakeLists.txt  library.json
springbootplusplus_data_scripts/: springbootplusplus_data_execute_scripts.py  springbootplusplus_data_pre_build.py
springbootplusplus_data_scripts/springbootplusplus_data_core/: extract_id_fields.py  get_client_files.py  inject_primary_key_methods.py
springbootplusplus_data_scripts/springbootplusplus_data_core/repository/: detect_repository.py  extract_entity_type.py  extract_findby_variable_name.py  extract_method_action.py  extract_parameter_name.py  extract_repository_methods.py  generate_method_implementation.py  generate_repository_implementation.py  implement_repository.py  process_repository.py
springbootplusplus_data_scripts/springbootplusplus_data_core/serialization/: 00_process_serializable_classes.py  S1_check_dto_macro.py  S2_extract_dto_fields.py  S3_inject_serialization.py  S6_discover_validation_macros.py  S7_extract_validation_fields.py
src/: ArduinoFileManager.h  CpaRepository.h  DesktopFileManager.h  IFileManager.h
src/repository/: CpaRepositoryImpl.h
